--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <input type="text" id="chat-item">
-    <button id="chat"></button>
+    <button id="chat">chat</button>
     <div id="chat-content"></div>
     
     <script
